Fix timeline displaying break the grid issue

--- a/app/assets/stylesheets/custom.sass
+++ b/app/assets/stylesheets/custom.sass
@@ -29,7 +29,7 @@ a.wanderers-link
 /* Container around content
 
 .timeline-container
-  padding: 0px 40px
+  padding: 0px 40px 10px 40px
   position: relative
   background-color: inherit
   width: 50%
@@ -104,7 +104,7 @@ a.wanderers-link
   .timeline::after
     left: 31px
   /* Full-width containers
-  timeline-container
+  .timeline-container
     width: 100%
     padding-left: 70px
     padding-right: 25px
@@ -116,9 +116,9 @@ a.wanderers-link
   /* Make sure that all arrows are pointing leftwards
   /* Make sure all circles are at the same spot
   .left::after
-    left: 15px
+    left: 19px
   .right
     &::after
-      left: 15px
+      left: 19px
     left: 0%
   /* Make all right containers behave like the left ones
